css/index.css
/*!
 * Alex Berke 2017
 */
body {
  font-family: 'Lato', sans-serif;
  padding-top: 54px; 
  font-weight: 300;
  font-size: 1.02rem;
}

@media (min-width: 992px) {
  body {
    padding-top: 0;
    padding-left: 17rem; } }

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Lato', sans-serif;
  font-weight: 400;
  text-transform: uppercase; }

h1 {
  font-size: 6rem;
  line-height: 5.5rem; }

h2 {
  font-size: 3.5rem; }

p {
  margin-bottom: 0.7rem;
}

p.resume-item-explainer {
  margin-top: -0.9rem;
  color: gray;
  font-style: italic;
}
#talks p.resume-item-explainer {
  margin-top: 0;
  color: gray;
  font-style: italic;
}
#talks .row {
  margin-top: 10px;
}

.resume-item h3,
.resume-item h4,
.resume-item h5 {
  text-transform: none;
}

.subheading {
  font-weight: 300;
  font-family: 'Lato', sans-serif;
  font-size: 1.35rem; }

.list-social-icons a {
  color: #495057; }
  .list-social-icons a:hover {
    color: #BD5D38; }
  .list-social-icons a .fa-lg {
    font-size: 1.75rem; }

.list-icons {
  font-size: 3rem; }
  .list-icons .list-inline-item i:hover {
    color: #BD5D38; }


#sideNav {
  background-color: white;
  border-bottom: 1px solid gainsboro;
}

#sideNav .navbar-nav .nav-item.header {
  font-weight: 400;
  text-transform: uppercase; 
  font-size: 2em;
  margin-bottom: 30px; }
  #sideNav .navbar-nav .nav-item.header .nav-link {
    font-weight: 400;
  }

#sideNav .navbar-nav .nav-item .nav-link {
  font-weight: 300;
  text-transform: uppercase; }

@media (min-width: 992px) {
  #sideNav {
    text-align: left;
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    flex-direction: column;
    width: 17rem;
    height: 100vh; }
    #sideNav .navbar-brand {
      display: flex;
      margin: auto auto 0;
      padding: 0.5rem; }
      #sideNav .navbar-brand .img-profile {
        max-width: 10rem;
        max-height: 10rem;
        border: 0.5rem solid rgba(255, 255, 255, 0.2); }
    #sideNav .navbar-collapse {
      display: flex;
      align-items: flex-start;
      flex-grow: 0;
      width: 100%;
      margin-bottom: auto; }
      #sideNav .navbar-collapse .navbar-nav {
        flex-direction: column;
        width: 100%; }
        #sideNav .navbar-collapse .navbar-nav .nav-item {
          display: block; }
          #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
            display: block; } }

.navbar-toggler-icon {
    width: 50px;
    height: 50px;
    border: 1px solid gainsboro;
    border-radius: 6px;
    background-image: url('/img/burgerIcon.png'); }

section.resume-section:first-of-type {
  margin-top: 100px;
}

section.resume-section {
  border-bottom: 1px solid #dee2e6; }
  section.resume-section .resume-item .resume-right {
    min-width: none; }

@media (min-width: 768px) {
  section.resume-section {}
    section.resume-section .resume-item .resume-right {
      min-width: 15rem; } }
      section.resume-section .resume-item .resume-right p {
        margin-bottom: 0; 
        color: black !important; } }

@media (min-width: 992px) {
  section.resume-section {
    padding-top: 3rem !important;
    padding-bottom: 3rem !important; } }

.resume-item.education {
  margin-bottom: 1rem !important;
}

.education p {
  margin-bottom: 0 !important;
}


#handle-div img, #handle-div .img {
  width: 25px;
  height: 25px;
  margin-left: 0;
  margin-right: 10px;
}

.text-primary {
  color: black !important; }

a {
  color: black; }
  a:hover, a:focus, a:active {
    color: gray; }

p a, .resume-item li a {
  color: purple;
  text-decoration: underline;
}

